@@ -28,16 +28,17 @@ import static com.hedera.hapi.node.base.HederaFunctionality.SCHEDULE_CREATE;
 import static com.hedera.hapi.node.base.HederaFunctionality.SCHEDULE_SIGN;
 import static com.hedera.hapi.node.base.HederaFunctionality.TOKEN_BURN;
 import static com.hedera.hapi.node.base.HederaFunctionality.TOKEN_MINT;
+import static com.hedera.hapi.node.base.HederaFunctionality.TRANSACTION_GET_RECEIPT;
 import static com.hedera.node.app.service.schedule.impl.schemas.V0490ScheduleSchema.SCHEDULES_BY_ID_KEY;
 import static com.hedera.node.app.throttle.ThrottleAccumulator.ThrottleType.FRONTEND_THROTTLE;
 import static com.hedera.pbj.runtime.ProtoTestTools.getThreadLocalDataBuffer;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.collection.IsIterableContainingInOrder.contains;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.verify;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -60,6 +61,8 @@ import com.hedera.hapi.node.scheduled.SchedulableTransactionBody;
 import com.hedera.hapi.node.scheduled.ScheduleCreateTransactionBody;
 import com.hedera.hapi.node.scheduled.ScheduleSignTransactionBody;
 import com.hedera.hapi.node.state.schedule.Schedule;
+import com.hedera.hapi.node.state.token.Account;
+import com.hedera.hapi.node.token.CryptoGetAccountBalanceQuery;
 import com.hedera.hapi.node.token.CryptoTransferTransactionBody;
 import com.hedera.hapi.node.token.TokenMintTransactionBody;
 import com.hedera.hapi.node.transaction.Query;
@@ -69,25 +72,32 @@ import com.hedera.node.app.hapi.utils.sysfiles.domain.throttling.ScaleFactor;
 import com.hedera.node.app.hapi.utils.throttles.BucketThrottle;
 import com.hedera.node.app.hapi.utils.throttles.DeterministicThrottle;
 import com.hedera.node.app.hapi.utils.throttles.GasLimitDeterministicThrottle;
+import com.hedera.node.app.service.token.TokenService;
 import com.hedera.node.app.spi.fixtures.util.LogCaptor;
 import com.hedera.node.app.spi.fixtures.util.LogCaptureExtension;
 import com.hedera.node.app.spi.fixtures.util.LoggingSubject;
 import com.hedera.node.app.spi.fixtures.util.LoggingTarget;
+import com.hedera.node.app.throttle.ThrottleAccumulator.Verbose;
 import com.hedera.node.app.workflows.TransactionInfo;
 import com.hedera.node.config.ConfigProvider;
+import com.hedera.node.config.VersionedConfigImpl;
 import com.hedera.node.config.VersionedConfiguration;
 import com.hedera.node.config.data.AccountsConfig;
 import com.hedera.node.config.data.AutoCreationConfig;
 import com.hedera.node.config.data.ContractsConfig;
 import com.hedera.node.config.data.EntitiesConfig;
 import com.hedera.node.config.data.LazyCreationConfig;
+import com.hedera.node.config.data.LedgerConfig;
 import com.hedera.node.config.data.SchedulingConfig;
 import com.hedera.node.config.data.TokensConfig;
+import com.hedera.node.config.testfixtures.HederaTestConfigBuilder;
 import com.hedera.pbj.runtime.ParseException;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import com.swirlds.state.State;
 import com.swirlds.state.spi.ReadableKVState;
 import com.swirlds.state.spi.ReadableStates;
+import com.swirlds.state.test.fixtures.MapReadableKVState;
+import com.swirlds.state.test.fixtures.MapReadableStates;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import java.io.IOException;
 import java.io.InputStream;
@@ -95,6 +105,7 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -148,6 +159,9 @@ class ThrottleAccumulatorTest {
     private SchedulingConfig schedulingConfig;
 
     @Mock
+    private LedgerConfig ledgerConfig;
+
+    @Mock
     private AccountsConfig accountsConfig;
 
     @Mock
@@ -190,7 +204,11 @@ class ThrottleAccumulatorTest {
     void worksAsExpectedForKnownQueries() throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -200,12 +218,12 @@ class ThrottleAccumulatorTest {
 
         // when
         final var queryPayerId = AccountID.newBuilder().accountNum(1_234L).build();
-        var noAns = subject.checkAndEnforceThrottle(CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT, query, queryPayerId);
-        subject.checkAndEnforceThrottle(GET_VERSION_INFO, TIME_INSTANT.plusNanos(1), query, queryPayerId);
-        final var yesAns =
-                subject.checkAndEnforceThrottle(GET_VERSION_INFO, TIME_INSTANT.plusNanos(2), query, queryPayerId);
-        final var throttlesNow = subject.activeThrottlesFor(CRYPTO_GET_ACCOUNT_BALANCE);
-        final var dNow = throttlesNow.get(0);
+        var noAns = subject.checkAndEnforceThrottle(TRANSACTION_GET_RECEIPT, TIME_INSTANT, query, state, queryPayerId);
+        subject.checkAndEnforceThrottle(GET_VERSION_INFO, TIME_INSTANT.plusNanos(1), query, state, queryPayerId);
+        final var yesAns = subject.checkAndEnforceThrottle(
+                GET_VERSION_INFO, TIME_INSTANT.plusNanos(2), query, state, queryPayerId);
+        final var throttlesNow = subject.activeThrottlesFor(TRANSACTION_GET_RECEIPT);
+        final var dNow = throttlesNow.getFirst();
 
         // then
         assertFalse(noAns);
@@ -214,10 +232,139 @@ class ThrottleAccumulatorTest {
     }
 
     @Test
+    void worksAsExpectedForSimpleGetBalanceThrottle() throws IOException, ParseException {
+        // given
+        final var config = HederaTestConfigBuilder.create()
+                .withValue("tokens.countingGetBalanceThrottleEnabled", false)
+                .getOrCreateConfig();
+        given(configProvider.getConfiguration()).willReturn(new VersionedConfigImpl(config, 1));
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
+        final var defs = getThrottleDefs("bootstrap/throttles.json");
+        subject.rebuildFor(defs);
+        final var query = Query.newBuilder()
+                .cryptogetAccountBalance(CryptoGetAccountBalanceQuery.newBuilder()
+                        .accountID(RECEIVER_ID)
+                        .build())
+                .build();
+        final var account = Account.newBuilder().numberAssociations(2).build();
+        final var states = MapReadableStates.builder()
+                .state(new MapReadableKVState<>("ACCOUNTS", Map.of(RECEIVER_ID, account)))
+                .state(new MapReadableKVState<>("ALIASES", Map.of()))
+                .build();
+        lenient().when(state.getReadableStates(TokenService.NAME)).thenReturn(states);
+
+        // when
+        final var result = new boolean[] {
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(0), query, state, PAYER_ID),
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(1), query, state, PAYER_ID),
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(2), query, state, PAYER_ID),
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(3), query, state, PAYER_ID)
+        };
+
+        // then
+        assertThat(result).containsExactly(false, false, false, true);
+    }
+
+    @Test
+    void worksAsExpectedForCountingGetBalanceThrottle() throws IOException, ParseException {
+        // given
+        final var config = HederaTestConfigBuilder.create()
+                .withValue("tokens.countingGetBalanceThrottleEnabled", true)
+                .getOrCreateConfig();
+        given(configProvider.getConfiguration()).willReturn(new VersionedConfigImpl(config, 1));
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
+        final var defs = getThrottleDefs("bootstrap/throttles.json");
+        subject.rebuildFor(defs);
+        final var query = Query.newBuilder()
+                .cryptogetAccountBalance(CryptoGetAccountBalanceQuery.newBuilder()
+                        .accountID(RECEIVER_ID)
+                        .build())
+                .build();
+        final var account = Account.newBuilder().numberAssociations(2).build();
+        final var states = MapReadableStates.builder()
+                .state(new MapReadableKVState<>("ACCOUNTS", Map.of(RECEIVER_ID, account)))
+                .state(new MapReadableKVState<>("ALIASES", Map.of()))
+                .build();
+        given(state.getReadableStates(TokenService.NAME)).willReturn(states);
+
+        // when
+        final var result = new boolean[] {
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(0), query, state, PAYER_ID),
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(1), query, state, PAYER_ID)
+        };
+
+        // then
+        assertThat(result).containsExactly(false, true);
+    }
+
+    @Test
+    void worksAsExpectedForCountingGetBalanceThrottleWithEmptyAccount() throws IOException, ParseException {
+        // given
+        final var config = HederaTestConfigBuilder.create()
+                .withValue("tokens.countingGetBalanceThrottleEnabled", true)
+                .getOrCreateConfig();
+        given(configProvider.getConfiguration()).willReturn(new VersionedConfigImpl(config, 1));
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
+        final var defs = getThrottleDefs("bootstrap/throttles.json");
+        subject.rebuildFor(defs);
+        final var query = Query.newBuilder()
+                .cryptogetAccountBalance(CryptoGetAccountBalanceQuery.newBuilder()
+                        .accountID(RECEIVER_ID)
+                        .build())
+                .build();
+        final var account = Account.newBuilder().numberAssociations(0).build();
+        final var states = MapReadableStates.builder()
+                .state(new MapReadableKVState<>("ACCOUNTS", Map.of(RECEIVER_ID, account)))
+                .state(new MapReadableKVState<>("ALIASES", Map.of()))
+                .build();
+        given(state.getReadableStates(TokenService.NAME)).willReturn(states);
+
+        // when
+        final var result = new boolean[] {
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(0), query, state, PAYER_ID),
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(1), query, state, PAYER_ID),
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(2), query, state, PAYER_ID),
+            subject.checkAndEnforceThrottle(
+                    CRYPTO_GET_ACCOUNT_BALANCE, TIME_INSTANT.plusNanos(3), query, state, PAYER_ID)
+        };
+
+        // then
+        assertThat(result).containsExactly(false, false, false, true);
+    }
+
+    @Test
     void worksAsExpectedForUnknownQueries() throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -229,7 +376,8 @@ class ThrottleAccumulatorTest {
 
         // then
         final var queryPayerId = AccountID.newBuilder().accountNum(1_234L).build();
-        assertTrue(subject.checkAndEnforceThrottle(NETWORK_GET_EXECUTION_TIME, TIME_INSTANT, query, queryPayerId));
+        assertTrue(
+                subject.checkAndEnforceThrottle(NETWORK_GET_EXECUTION_TIME, TIME_INSTANT, query, state, queryPayerId));
     }
 
     @ParameterizedTest
@@ -237,7 +385,8 @@ class ThrottleAccumulatorTest {
     void checkAndClaimThrottlesByGasAndTotalAllowedGasPerSecNotSetOrZero(
             ThrottleAccumulator.ThrottleType throttleType) {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
         given(contractsConfig.throttleThrottleByGas()).willReturn(true);
@@ -247,7 +396,7 @@ class ThrottleAccumulatorTest {
 
         // then
         System.out.println(logCaptor.warnLogs());
-        assertThat(logCaptor.warnLogs(), contains(throttleType + " gas throttling enabled, but limited to 0 gas/sec"));
+        assertThat(logCaptor.warnLogs()).contains(throttleType + " gas throttling enabled, but limited to 0 gas/sec");
     }
 
     @ParameterizedTest
@@ -256,7 +405,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -294,7 +443,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -335,7 +484,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -374,7 +523,7 @@ class ThrottleAccumulatorTest {
     void handlesThrottleExemption(ThrottleAccumulator.ThrottleType throttleType) throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -408,7 +557,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -448,7 +597,7 @@ class ThrottleAccumulatorTest {
             ThrottleAccumulator.ThrottleType throttleType) throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -489,7 +638,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -528,7 +677,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -567,7 +716,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -606,7 +755,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -644,7 +793,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -682,7 +831,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -720,7 +869,7 @@ class ThrottleAccumulatorTest {
             ThrottleAccumulator.ThrottleType throttleType) throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -762,7 +911,7 @@ class ThrottleAccumulatorTest {
             ThrottleAccumulator.ThrottleType throttleType) throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -804,7 +953,7 @@ class ThrottleAccumulatorTest {
             ThrottleAccumulator.ThrottleType throttleType) throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -846,7 +995,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -887,7 +1036,8 @@ class ThrottleAccumulatorTest {
     @EnumSource
     void alwaysThrottlesContractCallWhenGasThrottleIsNotDefined(ThrottleAccumulator.ThrottleType throttleType) {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -915,7 +1065,8 @@ class ThrottleAccumulatorTest {
     @EnumSource
     void alwaysThrottlesContractCallWhenGasThrottleReturnsTrue(ThrottleAccumulator.ThrottleType throttleType) {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -945,7 +1096,8 @@ class ThrottleAccumulatorTest {
     @EnumSource
     void alwaysThrottlesContractCreateWhenGasThrottleIsNotDefined(ThrottleAccumulator.ThrottleType throttleType) {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -973,7 +1125,8 @@ class ThrottleAccumulatorTest {
     @EnumSource
     void alwaysThrottlesContractCreateWhenGasThrottleReturnsTrue(ThrottleAccumulator.ThrottleType throttleType) {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -1008,7 +1161,8 @@ class ThrottleAccumulatorTest {
     @EnumSource
     void alwaysThrottlesEthereumTxnWhenGasThrottleIsNotDefined(ThrottleAccumulator.ThrottleType throttleType) {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -1036,7 +1190,8 @@ class ThrottleAccumulatorTest {
     @EnumSource
     void alwaysThrottlesEthereumTxnWhenGasThrottleReturnsTrue(ThrottleAccumulator.ThrottleType throttleType) {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -1072,7 +1227,8 @@ class ThrottleAccumulatorTest {
     @EnumSource
     void gasLimitThrottleReturnsCorrectObject(ThrottleAccumulator.ThrottleType throttleType) {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
         given(contractsConfig.throttleThrottleByGas()).willReturn(true);
@@ -1092,7 +1248,8 @@ class ThrottleAccumulatorTest {
     void constructsExpectedBucketsFromTestResource(ThrottleAccumulator.ThrottleType throttleType)
             throws IOException, ParseException {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         final var defs = getThrottleDefs("bootstrap/throttles.json");
 
@@ -1101,7 +1258,8 @@ class ThrottleAccumulatorTest {
                 DeterministicThrottle.withMtpsAndBurstPeriod(15_000_000, 2),
                 DeterministicThrottle.withMtpsAndBurstPeriod(5_000, 2),
                 DeterministicThrottle.withMtpsAndBurstPeriod(50_000, 3),
-                DeterministicThrottle.withMtpsAndBurstPeriod(5000, 4));
+                DeterministicThrottle.withMtpsAndBurstPeriod(5000, 4),
+                DeterministicThrottle.withMtpsAndBurstPeriod(3000, 1));
 
         // when
         subject.rebuildFor(defs);
@@ -1117,7 +1275,7 @@ class ThrottleAccumulatorTest {
     @EnumSource
     void alwaysRejectsIfNoThrottle(ThrottleAccumulator.ThrottleType throttleType) {
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -1135,7 +1293,8 @@ class ThrottleAccumulatorTest {
     @ParameterizedTest
     @EnumSource
     void verifyLeakUnusedGas(ThrottleAccumulator.ThrottleType throttleType) throws IOException, ParseException {
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, Verbose.YES);
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
         given(accountsConfig.lastThrottleExempt()).willReturn(100L);
@@ -1170,7 +1329,11 @@ class ThrottleAccumulatorTest {
     @Test
     void alwaysThrottleNOfUnmanaged() throws IOException, ParseException {
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
         final var defs = getThrottleDefs("bootstrap/throttles.json");
 
         subject.rebuildFor(defs);
@@ -1181,7 +1344,11 @@ class ThrottleAccumulatorTest {
     @Test
     void canThrottleNOfManaged() throws IOException, ParseException {
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
         final var defs = getThrottleDefs("bootstrap/throttles.json");
 
         subject.rebuildFor(defs);
@@ -1196,7 +1363,11 @@ class ThrottleAccumulatorTest {
     @Test
     void whenThrottlesUsesNoCapacity() throws IOException, ParseException {
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
         final var defs = getThrottleDefs("bootstrap/throttles.json");
 
         subject.rebuildFor(defs);
@@ -1209,7 +1380,11 @@ class ThrottleAccumulatorTest {
     @Test
     void canLeakCapacityForNOfManaged() throws IOException, ParseException {
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
         final var defs = getThrottleDefs("bootstrap/throttles.json");
 
         subject.rebuildFor(defs);
@@ -1233,653 +1408,6 @@ class ThrottleAccumulatorTest {
         "BACKEND_THROTTLE,false,true",
         "BACKEND_THROTTLE,false,false",
     })
-    @MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
-    void usesScheduleCreateThrottleForSubmitMessage(
-            final ThrottleAccumulator.ThrottleType throttleType,
-            final boolean longTermEnabled,
-            final boolean waitForExpiry)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(longTermEnabled);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(true);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(false);
-
-        final var scheduledSubmit = SchedulableTransactionBody.newBuilder()
-                .consensusSubmitMessage(ConsensusSubmitMessageTransactionBody.DEFAULT)
-                .build();
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(scheduledSubmit, waitForExpiry, null);
-        final boolean firstAns = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        boolean subsequentAns = false;
-        for (int i = 1; i <= 150; i++) {
-            subsequentAns = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT.plusNanos(i), state);
-        }
-
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(firstAns);
-        assertTrue(subsequentAns);
-        assertEquals(149999992500000L, aNow.used());
-        assertEquals(
-                longTermEnabled && throttleType == FRONTEND_THROTTLE && (!waitForExpiry) ? 149999255000000L : 0,
-                subject.activeThrottlesFor(CONSENSUS_SUBMIT_MESSAGE).get(0).used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true,true",
-        "FRONTEND_THROTTLE,true,false",
-        "FRONTEND_THROTTLE,false,true",
-        "FRONTEND_THROTTLE,false,false",
-        "BACKEND_THROTTLE,true,true",
-        "BACKEND_THROTTLE,true,false",
-        "BACKEND_THROTTLE,false,true",
-        "BACKEND_THROTTLE,false,false",
-    })
-    @MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
-    void usesScheduleCreateThrottleWithNestedThrottleExempt(
-            final ThrottleAccumulator.ThrottleType throttleType,
-            final boolean longTermEnabled,
-            final boolean waitForExpiry)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(longTermEnabled);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(true);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(false);
-
-        final var scheduledSubmit = SchedulableTransactionBody.newBuilder()
-                .consensusSubmitMessage(ConsensusSubmitMessageTransactionBody.DEFAULT)
-                .build();
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(
-                scheduledSubmit,
-                waitForExpiry,
-                AccountID.newBuilder().accountNum(2L).build());
-        final boolean firstAns = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        boolean subsequentAns = false;
-        for (int i = 1; i <= 150; i++) {
-            subsequentAns = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT.plusNanos(i), state);
-        }
-
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(firstAns);
-        assertTrue(subsequentAns);
-        assertEquals(149999992500000L, aNow.used());
-        assertEquals(
-                0, subject.activeThrottlesFor(CONSENSUS_SUBMIT_MESSAGE).get(0).used());
-    }
-
-    @ParameterizedTest
-    @EnumSource
-    void scheduleCreateAlwaysThrottledWhenNoBody(final ThrottleAccumulator.ThrottleType throttleType)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(SchedulableTransactionBody.DEFAULT, false, null);
-        final boolean firstAns = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        for (int i = 1; i <= 150; i++) {
-            assertTrue(subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT.plusNanos(i), state));
-        }
-
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertTrue(firstAns);
-        assertEquals(0, aNow.used());
-        assertEquals(
-                0, subject.activeThrottlesFor(CONSENSUS_SUBMIT_MESSAGE).get(0).used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true",
-        "FRONTEND_THROTTLE,false",
-        "BACKEND_THROTTLE,true",
-        "BACKEND_THROTTLE,false",
-    })
-    @MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
-    void usesScheduleCreateThrottleForCryptoTransferNoAutoCreations(
-            final ThrottleAccumulator.ThrottleType throttleType, final boolean longTermEnabled)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(longTermEnabled);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(true);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(false);
-        given(configuration.getConfigData(EntitiesConfig.class)).willReturn(entitiesConfig);
-        given(entitiesConfig.unlimitedAutoAssociationsEnabled()).willReturn(true);
-
-        given(state.getReadableStates(any())).willReturn(readableStates);
-
-        final var scheduledTransferNoAliases = SchedulableTransactionBody.newBuilder()
-                .cryptoTransfer(cryptoTransferWithImplicitCreations(0))
-                .build();
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(scheduledTransferNoAliases, false, null);
-        final boolean ans = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(ans);
-        assertEquals(BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-        assertEquals(
-                longTermEnabled && throttleType == FRONTEND_THROTTLE ? BucketThrottle.capacityUnitsPerTxn() : 0,
-                subject.activeThrottlesFor(CRYPTO_TRANSFER).get(0).used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true",
-        "FRONTEND_THROTTLE,false",
-        "BACKEND_THROTTLE,true",
-        "BACKEND_THROTTLE,false",
-    })
-    @MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
-    void doesntUseCryptoCreateThrottleForCryptoTransferWithAutoCreationIfAutoAndLazyCreationDisabled(
-            final ThrottleAccumulator.ThrottleType throttleType, final boolean longTermEnabled)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(longTermEnabled);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(false);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(false);
-        given(configuration.getConfigData(EntitiesConfig.class)).willReturn(entitiesConfig);
-        given(entitiesConfig.unlimitedAutoAssociationsEnabled()).willReturn(true);
-
-        given(state.getReadableStates(any())).willReturn(readableStates);
-        given(readableStates.get(ALIASES_KEY)).willReturn(aliases);
-
-        final var alias = keyToBytes(A_PRIMITIVE_KEY);
-        var accountAmounts = new ArrayList<AccountAmount>();
-        accountAmounts.add(AccountAmount.newBuilder()
-                .amount(-1_000_000_000L)
-                .accountID(AccountID.newBuilder().accountNum(3333L).build())
-                .build());
-        accountAmounts.add(AccountAmount.newBuilder()
-                .amount(+1_000_000_000L)
-                .accountID(AccountID.newBuilder().alias(alias).build())
-                .build());
-        final var scheduledTransferWithAutoCreation = SchedulableTransactionBody.newBuilder()
-                .cryptoTransfer(CryptoTransferTransactionBody.newBuilder()
-                        .transfers(TransferList.newBuilder()
-                                .accountAmounts(accountAmounts)
-                                .build()))
-                .build();
-
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(scheduledTransferWithAutoCreation, false, null);
-        final boolean ans = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(ans);
-        assertEquals(BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-
-        assertEquals(
-                longTermEnabled && throttleType == FRONTEND_THROTTLE ? BucketThrottle.capacityUnitsPerTxn() : 0,
-                subject.activeThrottlesFor(CRYPTO_TRANSFER).get(0).used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true,true",
-        "FRONTEND_THROTTLE,true,false",
-        "FRONTEND_THROTTLE,false,true",
-        "FRONTEND_THROTTLE,false,false",
-        "BACKEND_THROTTLE,true,true",
-        "BACKEND_THROTTLE,true,false",
-        "BACKEND_THROTTLE,false,true",
-        "BACKEND_THROTTLE,false,false",
-    })
-    @MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
-    void doesntUseCryptoCreateThrottleForCryptoTransferWithNoAliases(
-            final ThrottleAccumulator.ThrottleType throttleType,
-            final boolean longTermEnabled,
-            final boolean autoOrLazyCreationEnabled)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(longTermEnabled);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(autoOrLazyCreationEnabled);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(!autoOrLazyCreationEnabled);
-        given(configuration.getConfigData(EntitiesConfig.class)).willReturn(entitiesConfig);
-        given(entitiesConfig.unlimitedAutoAssociationsEnabled()).willReturn(true);
-
-        given(state.getReadableStates(any())).willReturn(readableStates);
-
-        var accountAmounts = new ArrayList<AccountAmount>();
-        accountAmounts.add(AccountAmount.newBuilder()
-                .amount(-1_000_000_000L)
-                .accountID(AccountID.newBuilder().accountNum(3333L).build())
-                .build());
-        accountAmounts.add(AccountAmount.newBuilder()
-                .amount(+1_000_000_000L)
-                .accountID(AccountID.newBuilder().accountNum(4444L).build())
-                .build());
-        final var scheduledTransferNoAliases = SchedulableTransactionBody.newBuilder()
-                .cryptoTransfer(CryptoTransferTransactionBody.newBuilder()
-                        .transfers(TransferList.newBuilder()
-                                .accountAmounts(accountAmounts)
-                                .build()))
-                .build();
-
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(scheduledTransferNoAliases, false, null);
-        final boolean ans = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(ans);
-        assertEquals(BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-        assertEquals(
-                longTermEnabled && throttleType == FRONTEND_THROTTLE ? BucketThrottle.capacityUnitsPerTxn() : 0,
-                subject.activeThrottlesFor(CRYPTO_TRANSFER).get(0).used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true,true",
-        "FRONTEND_THROTTLE,true,false",
-        "FRONTEND_THROTTLE,false,true",
-        "FRONTEND_THROTTLE,false,false",
-        "BACKEND_THROTTLE,true,true",
-        "BACKEND_THROTTLE,true,false",
-        "BACKEND_THROTTLE,false,true",
-        "BACKEND_THROTTLE,false,false",
-    })
-    void doesntUseCryptoCreateThrottleForNonCryptoTransfer(
-            final ThrottleAccumulator.ThrottleType throttleType,
-            final boolean autoCreationEnabled,
-            final boolean lazyCreationEnabled)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(false);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(autoCreationEnabled);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(lazyCreationEnabled);
-
-        final var scheduledTxn = SchedulableTransactionBody.newBuilder()
-                .consensusSubmitMessage(ConsensusSubmitMessageTransactionBody.DEFAULT)
-                .build();
-
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(scheduledTxn, false, null);
-        final boolean ans = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(ans);
-        assertEquals(BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true",
-        "FRONTEND_THROTTLE,false",
-        "BACKEND_THROTTLE,true",
-        "BACKEND_THROTTLE,false",
-    })
-    @MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
-    void usesCryptoCreateThrottleForCryptoTransferWithAutoCreationInScheduleCreate(
-            final ThrottleAccumulator.ThrottleType throttleType, final boolean longTermEnabled)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(longTermEnabled);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(true);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(false);
-        given(configuration.getConfigData(EntitiesConfig.class)).willReturn(entitiesConfig);
-        given(entitiesConfig.unlimitedAutoAssociationsEnabled()).willReturn(true);
-
-        given(state.getReadableStates(any())).willReturn(readableStates);
-        given(readableStates.get(ALIASES_KEY)).willReturn(aliases);
-
-        final var alias = keyToBytes(A_PRIMITIVE_KEY);
-        if (!(throttleType != FRONTEND_THROTTLE && longTermEnabled)) {
-            given(aliases.get(any())).willReturn(null);
-        }
-
-        var accountAmounts = new ArrayList<AccountAmount>();
-        accountAmounts.add(AccountAmount.newBuilder()
-                .amount(-1_000_000_000L)
-                .accountID(AccountID.newBuilder().accountNum(3333L).build())
-                .build());
-        accountAmounts.add(AccountAmount.newBuilder()
-                .amount(+1_000_000_000L)
-                .accountID(AccountID.newBuilder().alias(alias).build())
-                .build());
-        final var scheduledTransferWithAutoCreation = SchedulableTransactionBody.newBuilder()
-                .cryptoTransfer(CryptoTransferTransactionBody.newBuilder()
-                        .transfers(TransferList.newBuilder()
-                                .accountAmounts(accountAmounts)
-                                .build()))
-                .build();
-
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(scheduledTransferWithAutoCreation, false, null);
-        final boolean ans = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(ans);
-        if (longTermEnabled && throttleType == FRONTEND_THROTTLE) {
-            // with long term enabled, we count the schedule create in addition to the auto
-            // creations, which
-            // is how it should have been to start with
-            assertEquals(51 * BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-        } else if (longTermEnabled) {
-            // with long term enabled, consensus throttles do not count the contained txn
-            assertEquals(BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-        } else {
-            assertEquals(50 * BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-        }
-
-        assertEquals(0, subject.activeThrottlesFor(CRYPTO_TRANSFER).get(0).used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true",
-        "FRONTEND_THROTTLE,false",
-        "BACKEND_THROTTLE,true",
-        "BACKEND_THROTTLE,false",
-    })
-    @MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
-    void usesCryptoCreateThrottleForCryptoTransferWithAutoAssociationsInScheduleCreate(
-            final ThrottleAccumulator.ThrottleType throttleType, final boolean longTermEnabled)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(longTermEnabled);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(true);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(false);
-        given(configuration.getConfigData(EntitiesConfig.class)).willReturn(entitiesConfig);
-        given(entitiesConfig.unlimitedAutoAssociationsEnabled()).willReturn(true);
-        given(state.getReadableStates(any())).willReturn(readableStates);
-        given(readableStates.get(any())).willReturn(tokenRels);
-
-        final var scheduledTransferWithAutAssoc = SchedulableTransactionBody.newBuilder()
-                .cryptoTransfer(cryptoTransferFungibleWithAutoAssociations(10))
-                .build();
-
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(scheduledTransferWithAutAssoc, false, null);
-        final boolean ans = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(ans);
-        if (longTermEnabled && throttleType == FRONTEND_THROTTLE) {
-            // with long term enabled, we count the schedule create in addition to the auto
-            // associations, which
-            // is how it should have been to start with
-            assertEquals(11 * BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-        } else {
-            assertEquals(BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-        }
-
-        assertEquals(0, subject.activeThrottlesFor(CRYPTO_TRANSFER).get(0).used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true",
-        "FRONTEND_THROTTLE,false",
-        "BACKEND_THROTTLE,true",
-        "BACKEND_THROTTLE,false",
-    })
-    @MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
-    void usesScheduleCreateThrottleForAliasedCryptoTransferWithNoAutoCreation(
-            final ThrottleAccumulator.ThrottleType throttleType, final boolean longTermEnabled)
-            throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(longTermEnabled);
-        given(configuration.getConfigData(AutoCreationConfig.class)).willReturn(autoCreationConfig);
-        given(autoCreationConfig.enabled()).willReturn(true);
-        given(configuration.getConfigData(LazyCreationConfig.class)).willReturn(lazyCreationConfig);
-        given(lazyCreationConfig.enabled()).willReturn(false);
-        given(configuration.getConfigData(EntitiesConfig.class)).willReturn(entitiesConfig);
-        given(entitiesConfig.unlimitedAutoAssociationsEnabled()).willReturn(true);
-
-        given(state.getReadableStates(any())).willReturn(readableStates);
-        given(readableStates.get(ALIASES_KEY)).willReturn(aliases);
-
-        final var alias = keyToBytes(A_PRIMITIVE_KEY);
-        if (!(throttleType != FRONTEND_THROTTLE && longTermEnabled)) {
-            given(aliases.get(any()))
-                    .willReturn(AccountID.newBuilder().accountNum(1_234L).build());
-        }
-
-        var accountAmounts = new ArrayList<AccountAmount>();
-        accountAmounts.add(AccountAmount.newBuilder()
-                .amount(-1_000_000_000L)
-                .accountID(AccountID.newBuilder().accountNum(3333L).build())
-                .build());
-        accountAmounts.add(AccountAmount.newBuilder()
-                .amount(+1_000_000_000L)
-                .accountID(AccountID.newBuilder().alias(alias).build())
-                .build());
-        final var scheduledTransferWithAutoCreation = SchedulableTransactionBody.newBuilder()
-                .cryptoTransfer(CryptoTransferTransactionBody.newBuilder()
-                        .transfers(TransferList.newBuilder()
-                                .accountAmounts(accountAmounts)
-                                .build()))
-                .build();
-
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles.json");
-        subject.rebuildFor(defs);
-
-        // when
-        final var txnInfo = scheduleCreate(scheduledTransferWithAutoCreation, false, null);
-        final boolean ans = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        final var throttlesNow = subject.activeThrottlesFor(SCHEDULE_CREATE);
-        final var aNow = throttlesNow.get(0);
-
-        // then
-        assertFalse(ans);
-        assertEquals(BucketThrottle.capacityUnitsPerTxn(), aNow.used());
-
-        assertEquals(
-                longTermEnabled && throttleType == FRONTEND_THROTTLE ? BucketThrottle.capacityUnitsPerTxn() : 0,
-                subject.activeThrottlesFor(CRYPTO_TRANSFER).get(0).used());
-    }
-
-    @Test
-    void reclaimsAllUsagesOnThrottledCheckAndEnforceThrottleTxn() throws IOException, ParseException {
-        // given
-        subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
-
-        given(configProvider.getConfiguration()).willReturn(configuration);
-        given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
-        given(accountsConfig.lastThrottleExempt()).willReturn(100L);
-        given(configuration.getConfigData(ContractsConfig.class)).willReturn(contractsConfig);
-        given(contractsConfig.throttleThrottleByGas()).willReturn(false);
-        given(configuration.getConfigData(SchedulingConfig.class)).willReturn(schedulingConfig);
-        given(schedulingConfig.longTermEnabled()).willReturn(true);
-
-        final var scheduledSubmit = SchedulableTransactionBody.newBuilder()
-                .consensusSubmitMessage(ConsensusSubmitMessageTransactionBody.DEFAULT)
-                .build();
-        final var defs = getThrottleDefs("bootstrap/schedule-create-throttles-inverted.json");
-        subject.rebuildFor(defs);
-
-        final var txnInfo = scheduleCreate(scheduledSubmit, false, null);
-        final boolean firstAns = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT, state);
-        boolean subsequentAns = false;
-        for (int i = 1; i <= 150; i++) {
-            subsequentAns = subject.checkAndEnforceThrottle(txnInfo, TIME_INSTANT.plusNanos(i), state);
-        }
-
-        assertFalse(firstAns);
-        assertTrue(subsequentAns);
-        assertEquals(
-                4999250000000L,
-                subject.activeThrottlesFor(SCHEDULE_CREATE).get(0).used());
-
-        assertEquals(
-                4999999250000L,
-                subject.activeThrottlesFor(CONSENSUS_SUBMIT_MESSAGE).get(0).used());
-
-        // when
-        subject.resetUsage();
-
-        // then
-        assertEquals(0L, subject.activeThrottlesFor(SCHEDULE_CREATE).get(0).used());
-        assertEquals(
-                0L, subject.activeThrottlesFor(CONSENSUS_SUBMIT_MESSAGE).get(0).used());
-    }
-
-    @ParameterizedTest
-    @CsvSource({
-        "FRONTEND_THROTTLE,true,true",
-        "FRONTEND_THROTTLE,true,false",
-        "FRONTEND_THROTTLE,false,true",
-        "FRONTEND_THROTTLE,false,false",
-        "BACKEND_THROTTLE,true,true",
-        "BACKEND_THROTTLE,true,false",
-        "BACKEND_THROTTLE,false,true",
-        "BACKEND_THROTTLE,false,false",
-    })
     void usesScheduleSignThrottle(
             final ThrottleAccumulator.ThrottleType throttleType,
             final boolean longTermEnabled,
@@ -1887,7 +1415,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
 
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
@@ -1957,7 +1485,7 @@ class ThrottleAccumulatorTest {
             throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
 
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
@@ -2015,7 +1543,11 @@ class ThrottleAccumulatorTest {
     void scheduleSignAlwaysThrottledWhenNoBody() throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
 
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
@@ -2061,7 +1593,11 @@ class ThrottleAccumulatorTest {
     void scheduleSignAlwaysThrottledWhenNotExisting() throws IOException, ParseException {
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                gasThrottle);
 
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
@@ -2108,7 +1644,7 @@ class ThrottleAccumulatorTest {
 
         // given
         subject = new ThrottleAccumulator(
-                () -> CAPACITY_SPLIT, configProvider, throttleType, throttleMetrics, gasThrottle);
+                () -> CAPACITY_SPLIT, configProvider::getConfiguration, throttleType, throttleMetrics, gasThrottle);
 
         given(configProvider.getConfiguration()).willReturn(configuration);
         given(configuration.getConfigData(AccountsConfig.class)).willReturn(accountsConfig);
@@ -2189,7 +1725,12 @@ class ThrottleAccumulatorTest {
     @Test
     void updateMetrics() {
         // given
-        subject = new ThrottleAccumulator(() -> CAPACITY_SPLIT, configProvider, FRONTEND_THROTTLE, throttleMetrics);
+        subject = new ThrottleAccumulator(
+                () -> CAPACITY_SPLIT,
+                configProvider::getConfiguration,
+                FRONTEND_THROTTLE,
+                throttleMetrics,
+                Verbose.YES);
 
         // when
         subject.updateAllMetrics();
